[package]
name = "koan-wasm-wrapper"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
koan = { git = "https://github.com/TogarashiPepper/koan.git", default-features = false }
console_error_panic_hook = "0.1.7"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
